  deparse(parse(text="?lm")[[1]])         # Doesn't know about ? operator
  deparse(parse(text="a:=b")[[1]])        # Doesn't know about := operator
  deparse(parse(text="a$'x'")[[1]])       # Conflates name and character
  deparse(parse(text="`*`(2)")[[1]])      # Result is syntactically invalid
  deparse(parse(text="`$`(a,b+2)")[[1]])  # Result is syntactically invalid
  a<-quote(if(x) X else Y); a[[3]]<-quote(if(T)3); deparse(a)# needs parens
}
In addition, the bug illustrated below was fixed, which was fixed
(differently) in R-3.0.0:
\preformatted{  a <- quote(f(1,2)); a[[1]] <- function(x,y)x+y; deparse(a) # Omits parens
}
  \item Fixed the following bug (also in R Core versions to at least 
        R-3.2.2):
\preformatted{  > parse()
  ?'\12a\x.'
  Error: '\x' used without hex digits in character string starting "'\1a\x"
}
        Note that the "2" has disappeared from the error message.  This
        bug also affected the results of \code{getParseData}.
  \item Fixed a memory leak that can be seen by running the code below:
\preformatted{  > long <- paste0 (c('"', rep("1234567890",820), '\\x."'), collapse="")
  > for (i in 1:1000000) try (e <- parse(text=long), silent=TRUE)
}
        The leak will not occur if 820 is changed to 810 in the above.
        This bug also exists in R Core versions to at least R-3.2.2.
  \item Entering a string constant containing Unicode escapes that was
        9999 or 10000 characters long would produce an error message saying
        "String is too long (max 10000 chars)".  This has been fixed
        so that the maximum now really is 10000 characters.  (Also present
        in R Core versions, to at least R-3.2.2.)
  \item Fixed a bug that caused the error caret in syntax error reports
        to be misplaced when more than one line of context was shown.
        This was supposedly fixed in R-3.0.2, but incorrectly, resulting
        in the error caret being misplaced when only one line of 